# calculator_game

./: .gitignore  CMakeLists.txt  README.md  autorun.sh
res/: data.pref
src/: button.cpp  button.hpp  core.cpp  core.hpp  event.hpp  flashing_text.hpp  level.cpp  level.hpp  main.cpp  manager.cpp  manager.hpp  operation.hpp  player_prefs.hpp  resource.hpp  text.hpp  util.cpp  util.hpp
